# demo-video-maker

./: .gitignore  LICENSE  mkdocs.yml  pixi.toml  pyproject.toml
docs/: index.md  license.md  operations_manual.md  prompt_examples.md
docs/api/: cursor.md  gif.md  mcp-server.md  models.md  narrator.md  recorder.md  stitcher.md  subtitles.md  tutorial.md
docs/architecture/: overview.md  pipeline.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  mcp-server.md  scenarios.md  tts.md
scenarios/examples/: admin_dashboard.yaml  api_explorer.yaml  basic_walkthrough.yaml  data_pipeline.yaml  ecommerce_checkout.yaml  gif_platform_tour.yaml  gif_redox_results.yaml  gif_stability_predict.yaml  protein_pipeline_showcase.yaml  protein_platform.yaml  protein_platform_copilot_demo.yaml  protein_platform_docking_workflow.yaml  protein_platform_full_demo.yaml  protein_unified_demo.yaml  saas_onboarding.yaml
src/demo_video_maker/: __init__.py  cli.py  cursor.py  gif.py  mcp_server.py  models.py  narration_export.py  narrator.py  recorder.py  stitcher.py  subtitles.py  tutorial.py
tests/: __init__.py
tests/e2e/: __init__.py  test_mcp_e2e.py
tests/integration/: __init__.py  test_mcp_integration.py
tests/smoke/: __init__.py  test_mcp_smoke.py
tests/unit/: __init__.py  test_cursor.py  test_gif.py  test_mcp_server.py  test_models.py  test_narration_export.py  test_narrator.py  test_stitcher.py  test_subtitles.py  test_tutorial.py
