[project]
name = "demo-video-maker"
version = "0.1.0"
description = "Automated webapp demo video recorder: Playwright + TTS + FFmpeg"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "playwright>=1.40",
    "pyyaml>=6.0",
    "click>=8.1",
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
demo-video-maker = "demo_video_maker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_video_maker"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
